# code-crime-scene

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ar.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  bench_test.rs  commands.rs  db.rs  keychain.rs  lib.rs  main.rs  models.rs  scanner.rs  util.rs
src-tauri/src/analysis/: artifact.rs  complexity.rs  defs.rs  detect.rs  dup.rs  graph.rs  lines.rs  lua.rs  metrics.rs  mod.rs  parse.rs  pass.rs  secrets.rs  tests.rs  tests_v2.rs  tests_v3.rs
src-tauri/src/git/: mod.rs  parse.rs  stats.rs
src/components/: ApiKeyField.tsx  BrandMark.tsx  EmptyArt.tsx  Icons.tsx  Markdown.tsx  Sidebar.tsx  Toast.tsx
src/lib/: api.ts  findings.ts  format.ts  i18n.tsx  mock.ts  report-md.ts  report.ts  scoring.ts  store.tsx  types.ts  useApiKey.ts  useCaseActions.ts
src/lib/findings/: build.ts  classify.ts  refactor.ts  shared.ts  templates.ts  verify.ts
src/lib/i18n/: ar-report.ts  ar-ui.ts  dict.ts  en-report.ts  en-ui.ts
src/lib/mock/: data.ts
src/styles/: app1.css  app2.css  app3.css  enhance1.css  enhance2.css  enhance3.css
src/views/: Analyzing.tsx  Cases.tsx  Home.tsx  Onboarding.tsx  Report.tsx  Settings.tsx
src/views/report/: dashboard-parts.tsx  dashboard.tsx  forensics.tsx  parts.tsx  sections.tsx  useReportActions.ts  useTrends.ts
src/views/settings/: parts.tsx
